refactor : 도메인, 엔티티 영역 분리 / Mapper를 통해 변환
JPA 양방향 관계, 불필요한 단방향 관계로 인해 엔티티 <-> 도메인 변환 과정에순환 참조가 발생했습니다. 깊은 연관관계로 처리하기 힘들어 불필요한 연관관계를 전부 삭제했습니다.
또한 Entity 영역에서 도메인->엔티티, 엔티티->도메인 변환 로직을 전부 구현하려고 했으나 연관관계(참조) 관계가 복잡할수록 처리하기 어려워 Mapper를 적용했습니다.
과거 잘못된 연관관계에 종속적으로 구현된 테스트로 인해 클린 아키텍처 적용에 불필요하거나 어려운 부분은 전부 삭제했습니다.